# surrealdb

./: '  .atom-build.json  .clippy.toml  .codecov.yml  .dockerignore  .editorconfig  .gdb_history  .gitignore  .gitmodules  .gitpod.yml  .neoconf.json  .pre-commit-config.yaml  .release-plz.toml  .rust-analyzer.toml  .rustfmt.toml  2  ;  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.lock.orig  Cargo.toml  Cargo.toml.orig  DOCKER.md  Dockerfile  Dockerfile.build  LICENSE  Makefile  Makefile.ci.toml  Makefile.ci.toml.orig  Makefile.common.toml  Makefile.local.toml  Makefile.toml  README.md  REVIEW.md  SECURITY.md  build.Dockerfile  build.rs  cackle.Dockerfile  cackle.toml  (+33 more)
client/: Cargo.toml  LICENSE  README.md
client/examples/concurrency/: main.rs
client/examples/query/: main.rs
client/examples/select/: main.rs
client/examples/transaction/: main.rs
client/examples/version/: main.rs
client/src/: err.rs  lib.rs  net.rs
client/src/method/: authenticate.rs  begin.rs  cancel.rs  commit.rs  content.rs  create.rs  delete.rs  export.rs  health.rs  import.rs  invalidate.rs  kill.rs  live.rs  merge.rs  mod.rs  patch.rs  query.rs  select.rs  set.rs  signin.rs  signup.rs  unset.rs  update.rs  use_ns.rs  version.rs
client/src/param/: credentials.rs  jwt.rs  mod.rs  query.rs  resource.rs
client/src/protocol/: mod.rs
client/tests/: native-http.rs  native-ws.rs  types.rs
core/: Cargo.toml  build.rs  rust-analyzer.json.old
core/src/: fflags.rs  lib.rs  options.rs
core/src/cf/: gc.rs  mutations.rs  reader.rs  writer.rs
core/src/cnf/: mod.rs
core/src/ctx/: cancellation.rs  canceller.rs  context.rs  mod.rs  reason.rs
core/src/dbs/: capabilities.rs  collector.rs  distinct.rs  executor.rs  explanation.rs  fuzzy_eq.rs  group.rs  iterator.rs  lifecycle.rs  mod.rs  node.rs  notification.rs  options.rs  plan.rs  processor.rs  response.rs  result.rs  session.rs  statement.rs  store.rs  test.rs  variables.rs
core/src/doc/: allow.rs  alter.rs  cache.rs  changefeeds.rs  check.rs  clean.rs  compute.rs  create.rs  delete.rs  document.rs  edges.rs  empty.rs  event.rs  field.rs  id.rs  index.rs  insert.rs  lives.rs  merge.rs  mod.rs  pluck.rs  process.rs  purge.rs  relate.rs  relation.rs  reset.rs  select.rs  store.rs  table.rs  (+2 more)
crates/catalog/: Cargo.toml  README.md
crates/common/: Cargo.toml  README.md
crates/core/: Cargo.toml  README.md  build.rs  test.surql
crates/fuzz/: Cargo.toml  fuzz_parallel.py
crates/language-tests/: .gitignore  Cargo.toml  README.md  out.txt
crates/macros/: Cargo.toml  LICENSE  README.md  release.toml
crates/parser/: Cargo.toml
crates/sdk/: 01JJCAF7B21040688KN6GA9TYG.sql  CARGO.md  Cargo.toml  README.md  build.rs
crates/sdk2/: Cargo.toml
crates/server/: Cargo.toml  README.md  build.rs
crates/sql/: Cargo.toml  README.md
crates/surrealdb-types/: Cargo.toml  README.md
crates/surrealdb-value/: Cargo.toml
crates/token/: Cargo.toml
crates/types/: Cargo.toml  README.md
crates/types-derive/: Cargo.toml
language-tests/: .nvim.lua  Cargo.toml  README.md  build.rs
language-tests/src/: cli.rs  lib.rs  main.rs  temp_dir.rs
language-tests/tests/: wasm_runner.rs
lib/: .gdb_history  CARGO.md  Cargo.toml  README.md  errors.txt  test.surql  test.txt
lib/benches/: README.md  executor.rs  hash_trie_btree.rs  hashset_vs_vector.rs  index_btree.rs  index_hnsw.rs  index_mtree.rs  move_vs_clone.rs  parser.rs  processor.rs  processor.rs.orig
lib/examples/: actix.rs
lib/fuzz/: .gitignore  Cargo.toml  README.md
lib/src/: fflags.rs  lib.rs  lib.rs.orig  sync.rs
lib/tests/: access.rs  alter.rs  api.rs  api_cluster.rs  array.rs  bootstrap.rs  bootstrap.rs.orig  cache.rs  cast.rs  changefeeds.rs  closure.rs  compare.rs  complex.rs  create.rs  datetimes.rs  define.rs  delete.rs  escape.rs  expression.rs  fetch.rs  field.rs  foreach.rs  function.rs  function2.rs  future.rs  geometry.rs  group.rs  helpers.rs  info.rs  insert.rs  limit.rs  live.rs  matches.rs  memory.rs  merge.rs  model.rs  option.rs  param.rs  parse.rs  planner.rs  (+25 more)
profiling/: Cargo.toml  README.md  profile.d  profile.sh
profiling/src/: main.rs
sdk/: CARGO.md  Cargo.toml  README.md
sdk/benches/: executor.rs  hash_trie_btree.rs  index_btree.rs  order.rs  parser.rs  processor.rs  sdb.rs  sort.rs  with_or_without_index.rs
sdk/fuzz/: .gitignore
sdk/src/: lib.rs
sdk/tests/: access.rs  alter.rs  api.rs  changefeeds.rs  create.rs  define.rs  delete.rs  escape.rs  expression.rs  fetch.rs  field.rs  foreach.rs  function.rs  future.rs  group.rs  helpers.rs  idiom.rs  info.rs  insert.rs  matches.rs  merge.rs  param.rs  planner.rs  relate.rs  remove.rs  return.rs  script.rs  select.rs  strict.rs  table.rs  throw.rs  timeout.rs  transaction.rs  typing.rs  update.rs  upsert.rs  vector.rs  yuse.rs
surrealdb/: CARGO.md  Cargo.toml
surrealdb/ast/: .nvim.lua  Cargo.toml
surrealdb/benches/: array_complement.rs  array_difference.rs  array_intersect.rs  array_uniq.rs  hashset_vs_vector.rs  parser.rs  processor.rs  scripting.rs  sdb.rs
surrealdb/cfg/: Cargo.toml  README.md
surrealdb/client-core/: Cargo.toml  README.md
surrealdb/common/: Cargo.toml
surrealdb/core/: .nvim.lua  Cargo.toml  build.rs  test.surql
surrealdb/fuzz/: Cargo.toml
surrealdb/mcp/: Cargo.toml
surrealdb/parser/: Cargo.toml
surrealdb/sdk/: README.md
surrealdb/server/: .nvim.lua  Cargo.toml  README.md  build.rs
surrealdb/sql-compat/: Cargo.toml
surrealdb/src/: lib.rs
surrealdb/tests/: api.rs
surrealdb/token/: Cargo.toml
surrealdb/types/: Cargo.toml
surrealism/: CLAUDE.md  Cargo.toml  REVIEW.md
surrealism/cli/: Cargo.toml
surrealism/demo/: Cargo.toml  surrealism.toml
surrealism/macros/: CLAUDE.md  Cargo.toml
surrealism/runtime/: CLAUDE.md  Cargo.toml
surrealism/src/: bindings.rs  controller.rs  dispatch.rs  imports.rs  lib.rs  memory.rs  p2_bindings.rs  p2_imports.rs  registry.rs
surrealism/surrealism/: Cargo.toml
surrealism/test/: build-demo.sh  full.sh  test.surql
surrealism/types/: CLAUDE.md  Cargo.toml  README.md
surrealism/wit/: CLAUDE.md  surrealism.wit
(+10253 files in other folders)
