[workspace]
members = [
    ".",
    "crates/core",
    "crates/sdk",
    "crates/server",
    "profiling"
]

[workspace.package]
authors = ["Tobie Morgan Hitchcock <tobie@surrealdb.com>"]
edition = "2024"
license-file = "LICENSE"
publish = false
version = "3.0.0-beta.1"
description = "A scalable, distributed, collaborative, document-graph database, for the realtime web"
repository = "https://github.com/surrealdb/surrealdb"
homepage = "https://github.com/surrealdb/surrealdb"
keywords = [
    "database",
    "embedded-database",
    "key-value",
    "key-value-store",
    "kv-store",
]
categories = ["database-implementations", "data-structures", "embedded"]

[workspace.dependencies]
# workspace internal dependencies
surrealdb = { version = "=3.0.0-beta.1", path = "crates/sdk" }
surrealdb-core = { version = "=3.0.0-beta.1", path = "crates/core", default-features = false }
surrealdb-server = { version = "=3.0.0-beta.1", path = "crates/server", default-features = false }

# External surreal crates
affinitypool = "0.4.0"
dmp = "0.2.3"
indxdb = "0.11.0"
lexicmp = "0.2.0"
revision = { version = "0.17.0", features = [
    "bytes",
    "chrono",
    "geo",
    "imbl",
    "roaring",
    "regex",
    "rust_decimal",
    "specialised-vectors",
    "uuid",
] }
storekey = { version = "0.11.0", features = ["bytes", "uuid", "imbl"] }
surrealdb-types = { version = "3.0.0-beta.1" }
surrealdb-types-derive = { version = "3.0.0-beta.1" }
surrealism-runtime = { version = "0.1.6" }
surrealkv = "0.16.0"
surrealml = { version = "0.1.9", package = "surrealml-core", features = [
    "dynamic",
] }
surrealmx = "0.15.0"
trice = "0.4.0"
vart = "0.9.3"
## Maintained by @Delskayn
js = { version = "0.9.0", package = "rquickjs", features = ["rust-alloc"] }
reblessive = "0.4.3"

# External Kv stores
rocksdb = { version = "0.24.0-surreal.1", package = "surrealdb-rocksdb", features = ["lz4", "snappy"] }

# Managed by surreal but mostly external code
tikv = { version = "0.3.0-surreal.4", default-features = false, package = "surrealdb-tikv-client" }

# Other crates
addr = { version = "0.15.6", default-features = false, features = ["std"] }
ahash = "0.8.12"
ammonia = "4.0.0"
anyhow = "1.0.100"
arbitrary = "1.3.2"
arc-swap = "1.7.1"
argon2 = "0.5.2"
arrayvec = "0.7.6"
async-channel = "2.3.1"
async-executor = "1.13.1"
async-graphql = { version = "7.0.17", default-features = false, features = ["custom-error-conversion"] }
async-graphql-axum = "7.0.17"
async-trait = "0.1.88"
base64 = "0.21.5"
bcrypt = "0.15.0"
bincode = "1.3.3"
blake3 = "1.5.3"
boxcar = "0.2.14"
bytes = "1.5.0"
castaway = "0.2.3"
chrono = "0.4.38"
ciborium = "0.2.1"
dashmap = "6.1.0"
deunicode = "1.6.1"
ext-sort = "^0.1.4"
fastnum = "0.3.2"
flatbuffers = { version = "25.2.10", features = ["serde"] }
fst = "0.4.7"
futures = "0.3.30"
futures-util = "0.3.30"
fuzzy-matcher = "0.3.7"
geo = { version = "0.28.0", default-features = false }
geo-types = "0.7.13"
getrandom = "0.3.2"
hex = "0.4.3"
http = "1.1.0"
hyper = "=1.6.0"
humantime = "2.3.0"
imbl = "6.1.0"
indexmap = "2.1.0"
ipnet = "2.11.0"
jemallocator = { version = "0.6.0", package = "tikv-jemallocator" }
jsonwebtoken = "9.3.0"
linfa-linalg = "=0.2.1"
lru = { version = "0.16.2", features = ["hashbrown"] }
md-5 = "0.10.6"
mimalloc = "0.1.48"
nanoid = "0.4.0"
native-tls = "0.2.11"
ndarray = "=0.16.1"
ndarray-stats = "=0.6.0"
num-traits = "0.2.18"
num_cpus = "1.16.0"
object_store = "0.12.0"
ort = "=2.0.0-rc.9"
ort-sys = "=2.0.0-rc.9"
papaya = "0.2.3"
parking_lot = "0.12.3"
path-clean = "1.0.1"
pbkdf2 = "0.12.2"
## TODO: Look at dependency, 3 year old, unmaintained, no license specified.
pharos = "0.5.3"
phf = "0.11.2"
pin-project-lite = "0.2.13"
quick_cache = "0.6.12"
# TODO: Look at use of this dependency. Last update was 4 years ago and it is unmaintained
radix_trie = "0.2.1"
rand = "0.8.5"
rayon = "1.10.0"
regex = "1.10.6"
regex-syntax = "0.8.4"
reqwest = { version = "0.12.7", default-features = false }
ring = "0.17.13"
roaring = "0.11.2"
rustls = { version = "0.23.12", default-features = false }
rust_decimal = { version = "1.39.0" }
rust-s3 = "0.35.1"
# TODO: Look at dependency, 5 years old seems unmaintained.
rust-stemmers = "1.2.0"
scrypt = "0.11.0"
semver = "1.0.27"
serde = "1.0.209"
serde_json = "1.0.145"
sha1 = "0.10.6"
sha2 = "0.10.8"
snap = "1.1.0"
strsim = "0.11.1"
subtle = "2.6"
surrealdb-protocol = { version = "0.6.0", default-features = false }
sysinfo = "0.33.0"
tempfile = "3.10.1"
thiserror = "1.0.63"
tokio = { version = "1.44.2", default-features = false }
tokio-stream = "0.1"
tokio-tungstenite = "0.28.0"
tokio-util = "0.7.11"
tracing = { version = "0.1.43", features = ["release_max_level_debug"] }
ulid = "1.1.0"
unicase = "2.7.0"
url = "2.5.0"
uuid = "1.17.0"
wasm-bindgen-futures = "0.4.39"
wasmtimer = { version = "0.2.0", default-features = false }
ws_stream_wasm = "0.7.4"

# used only in dev-dependencies
criterion = "0.5.1"
env_logger = "0.11.7"
flate2 = "1.0.28"
hashbrown = "0.14.5"
pprof = "0.14.0"
rstest = "0.25.0"
serial_test = "3.2.0"
temp-dir = "0.1.11"
test-log = "0.2.13"
time = "0.3.36"
tracing-subscriber = "0.3.18"
wiremock = "0.6.0"

# Surrealism specific dependencies
clap = { version = "4.5.40", features = ["derive"] }
toml = "0.8.10"
tar = "0.4.40"
zstd = "0.13.0"
wasmtime = { version = "34.0.1", default-features = false, features = ["cranelift", "winch"] }
wasmtime-wasi = "34.0.1"
walrus = "0.20.3"
wasm-opt = "0.116.0"
candle-core = "0.9.1"

[package]
name = "surreal"
publish = false
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
license-file.workspace = true

[features]
default = [
    "allocator",
    "allocation-tracking",
    "storage-mem",
    "storage-surrealkv",
    "storage-rocksdb",
    "storage-tikv",
    "scripting",
    "http",
    "surrealism",
    "graphql",
    "cli",
]

allocator = ["surrealdb-server/allocator"]
allocation-tracking = ["surrealdb-server/allocation-tracking"]
http = ["surrealdb-server/http"]
jwks = ["surrealdb-server/jwks"]
ml = ["surrealdb-server/ml"]
scripting = ["surrealdb-server/scripting"]
surrealism = ["surrealdb-server/surrealism"]
storage-mem = ["surrealdb-server/storage-mem"]
storage-surrealkv = ["surrealdb-server/storage-surrealkv"]
storage-rocksdb = ["surrealdb-server/storage-rocksdb"]
storage-tikv = ["surrealdb-server/storage-tikv"]
storage-indxdb = ["surrealdb-server/storage-indxdb"]
# GraphQL API support
graphql = ["surrealdb-server/graphql"]
# Interactive SQL CLI support
cli = ["surrealdb-server/cli"]

[dependencies]
# workspace internal dependencies
surrealdb = { workspace = true, features = [
    "protocol-http",
    "protocol-ws",
    "rustls",
] }
surrealdb-core.workspace = true
surrealdb-server.workspace = true

[target.'cfg(unix)'.dev-dependencies]
nix = { version = "0.27.1", features = ["signal", "user"] }

[dev-dependencies]
assert_fs = "1.0.13"
chrono.workspace = true
ciborium.workspace = true
futures.workspace = true
futures-util.workspace = true
http.workspace = true
jsonwebtoken.workspace = true
rand.workspace = true
rcgen = "0.13.2"
reqwest = { workspace = true, default-features = false, features = [
    "blocking",
    "gzip",
    "http2",
] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
surrealdb-types.workspace = true
test-log = { workspace = true, features = ["trace"] }
thiserror.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "signal", "tracing"] }
tokio-stream.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
ulid.workspace = true

[build-dependencies]
semver.workspace = true

[package.metadata.deb]
assets = [
    [
        "target/release/surreal",
        "usr/share/surrealdb/surreal",
        "755",
    ],
    [
        "pkg/deb/README",
        "usr/share/surrealdb/README",
        "644",
    ],
]
copyright = "SurrealDB Ltd. 2022"
depends = "$auto"
extended-description = "A scalable, distributed, collaborative, document-graph database, for the realtime web."
license-file = ["LICENSE", "4"]
maintainer = "Tobie Morgan Hitchcock <tobie@surrealdb.com>"
maintainer-scripts = "pkg/deb/"
priority = "optional"
section = "utility"
systemd-units = { enable = true }

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(docker)',
    'cfg(storage)',
] }

[workspace.lints.clippy]

# Checks for usage of `#[allow]` attribute and suggests replacing it with `#[expect]`.
# `#[expect]` attributes suppress the lint emission, but emit a warning if the expectation is unfulfilled.
# This is useful to be notified when the lint is no longer triggered.
# https://rust-lang.github.io/rust-clippy/master/#allow_attributes
# TODO(stu): We should try to replace all of these with `#[expect]` instead. Setting to `allow` for now to avoid
# more changes.
allow_attributes = "allow"

# Checks for code like `foo = bar.clone();`.
# Custom `Clone::clone_from()` or `ToOwned::clone_into` implementations allow the objects to share resources and
# therefore avoid allocations.
# https://rust-lang.github.io/rust-clippy/master/#assigning_clones
assigning_clones = "warn"

# This lint allows boolean comparisons in assert-like macros.
# It is fine to use `assert_eq!(val, true)` in tests and is often more readable than `assert!(val)`.
# https://rust-lang.github.io/rust-clippy/master/#bool_assert_comparison
bool_assert_comparison = "allow"

# Checks for the usage of `as _` conversion using inferred type.
# https://rust-lang.github.io/rust-clippy/master/#cloned_instead_of_copied
cloned_instead_of_copied = "warn"

# Checks for function/method calls with a mutable parameter in `debug_assert!`, `debug_assert_eq!` and
# `debug_assert_ne!` macros.
# In release builds `debug_assert!` macros are optimized out by the compiler. Therefore mutating something in a
# `debug_assert!` macro results in different behavior between a release and debug build.
# https://rust-lang.github.io/rust-clippy/master/#debug_assert_with_mut_call
debug_assert_with_mut_call = "warn"

# Denies the configured methods and functions in `clippy.toml`.
# Some methods are undesirable in certain contexts, and it’s beneficial to lint for them as needed.
# https://rust-lang.github.io/rust-clippy/master/#disallowed_methods
disallowed_methods = "warn"

# Checks for explicit `.into_iter()` calls in for loops when the loop already implicitly calls it.
# Removing the explicit call makes the code more concise and idiomatic.
# https://rust-lang.github.io/rust-clippy/master/#explicit_into_iter_loop
explicit_into_iter_loop = "warn"

# Checks for impls of `From<..>` that contain `panic!()` or `unwrap()`
# TryFrom should be used if there’s a possibility of failure.
# https://rust-lang.github.io/rust-clippy/master/#fallible_impl_from
fallible_impl_from = "warn"

# Checks for usage of `.get().unwrap()` (or `.get_mut().unwrap()`) on a standard library type which implements Index.
# Using the Index trait ([]) is more clear and more concise.
# https://rust-lang.github.io/rust-clippy/master/#get_unwrap
get_unwrap = "warn"

# Checks for the usage of `_.to_owned()`, `vec.to_vec()`, or similar when calling `_.clone()` would be clearer.
# https://rust-lang.github.io/rust-clippy/master/#implicit_clone
implicit_clone = "warn"

# Checks for usage of `.to_string()` on an `&&T` where `T` implements `ToString` directly (like `&&str` or `&&String`).
# This bypasses the specialized implementation of ToString and instead goes through the more expensive string
# formatting facilities.
# https://rust-lang.github.io/rust-clippy/master/#inefficient_to_string
inefficient_to_string = "warn"

# Checks for large types being passed by value instead of by reference.
# Passing large types by value causes unnecessary copies and memory overhead on the stack.
# https://rust-lang.github.io/rust-clippy/master/#large_types_passed_by_value
large_types_passed_by_value = "warn"

# Checks for whole number float literals that cannot be represented as the underlying type without loss.
# If the value was intended to be exact, it will not be. This may be especially surprising when the lost precision
# is to the left of the decimal point.
# https://rust-lang.github.io/rust-clippy/master/#lossy_float_literal
lossy_float_literal = "warn"

# Checks for usage of `.as_ref().cloned()` and suggests `.cloned()` instead.
# Using `.cloned()` directly is more concise and easier to read.
# https://rust-lang.github.io/rust-clippy/master/#option_as_ref_cloned
option_as_ref_cloned = "warn"

# Checks for unnecessary calls to `.clone()` on values that are already owned or about to be dropped.
# Redundant clones waste memory and CPU cycles without providing any benefit.
# https://rust-lang.github.io/rust-clippy/master/#redundant_clone
redundant_clone = "warn"

# Checks for usage of `.contains()` followed by `.insert()` on `HashSet` or `BTreeSet`.
# Using a single `.insert()` call and checking its return value is more efficient as it avoids double lookup.
# https://rust-lang.github.io/rust-clippy/master/#set_contains_or_insert
set_contains_or_insert = "warn"

# Checks for unnecessary calls to `to_owned()`, `to_string()` and other similar conversion methods
# that result in unnecessary allocations when a reference would suffice.
# https://rust-lang.github.io/rust-clippy/master/#unnecessary_to_owned
unnecessary_to_owned = "warn"

# Checks for functions that are declared `async` but have no `.await`s inside of them.
# Async functions with no async code create overhead, both mentally and computationally.
# https://rust-lang.github.io/rust-clippy/master/#unused_async
#
# SurrealDB relies on async functions in the AST parser and executor to avoid stack overflows.
# Warning or denying this lint can cause unexpected errors.
unused_async = "allow"

# Checks for `.unwrap()` or `.unwrap_err()` calls on Results and `.unwrap()` call on `Option`s.
# https://rust-lang.github.io/rust-clippy/master/index.html#unwrap_used
unwrap_used = "warn"

# Profiles
[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = 'abort'
strip = true

[profile.bench]
strip = false

[profile.make]
inherits = "dev"

[profile.profiling]
debug = true
inherits = "release"
strip = false
panic = 'unwind'
