[package]
name = "surreal"
publish = false
edition = "2021"
version = "2.6.1"
license-file = "LICENSE"
authors = ["Tobie Morgan Hitchcock <tobie@surrealdb.com>"]

[workspace]
members = ["./","crates/core", "crates/sdk"]

[workspace.dependencies]
# workspace internal dependencies
surrealdb-core = { version = "=2.6.1", package = "surrealdb-core", path = "./crates/core", default-features = false }
surrealdb = { version = "=2.6.1", package = "surrealdb", path = "./crates/sdk" }

# External surreal crates
surrealcs = { version = "0.4.4" }
surrealkv = { version = "0.9.1" }
surrealml = { version = "0.1.1", package = "surrealml-core" }
affinitypool = { version = "0.3.1" }
dmp = "0.2.0"
indxdb = "0.6.0"
ipnet = "2.9.0"
## Somewhat a surreal crate as it is maintained by @Delskayn.
js = { version = "0.11.0", package = "rquickjs" }
lexicmp = "0.1.0"
## Also maintained by @Delskayn
reblessive = "0.4.2"
revision = "0.11.0"
## Maintained by @rushmorem
serde-content = "0.1.0"
storekey = "0.5.0"
trice = "0.4.0"
vart = "0.8.1"

# External Kv stores
foundationdb = { version = "0.9.0", default-features = false, features = [
    "embedded-fdb-include",
] }
rocksdb = { version = "0.24.0-surreal.1", package = "surrealdb-rocksdb", features = ["lz4", "snappy"] }
# Managed by surreal but mostly external code
tikv = { version = "0.3.0-surreal.3", default-features = false, package = "surrealdb-tikv-client" }

# Other crates
addr = { version = "0.15.6", default-features = false, features = ["std"] }
ahash = "0.8.11"
ammonia = "4.0.0"
arbitrary = "1.3.2"
argon2 = "0.5.2"
arrayvec = "0.7.6"
ascii = { version = "0.3.2", package = "any_ascii" }
async-channel = "2.3.1"
async-executor = "1.13.1"
async-graphql = { version = "7.0.9", default-features = false }
async-graphql-axum = "=7.0.13"
base64 = "0.21.5"
bcrypt = "0.15.0"
bincode = "1.3.3"
blake3 = "1.5.3"
bytes = "1.5.0"
castaway = "0.2.3"
cedar-policy = "2.4.2"
chrono = "0.4.38"
ciborium = "0.2.1"
dashmap = "5.5.3"
deunicode = "1.4.1"
ext-sort = "^0.1.4"
fst = "0.4.7"
futures = "0.3.30"
futures-util = "0.3.30"
fuzzy-matcher = "0.3.7"
geo = "0.28.0"
geo-types = "0.7.13"
getrandom = "0.3.2"
hex = "0.4.3"
http = "1.1.0"
indexmap = "2.1.0"
jemallocator = { version = "0.6.0", package = "tikv-jemallocator" }
jsonwebtoken = "9.3.0"
linfa-linalg = "=0.1.0"
md-5 = "0.10.6"
nanoid = "0.4.0"
native-tls = "0.2.11"
ndarray = "=0.15.6"
ndarray-stats = "=0.5.1"
num_cpus = "1.16.0"
num-traits = "0.2.18"
object_store = "0.12.0"
path-clean = "1.0.1"
parking_lot = "0.12.3"
pbkdf2 = "0.12.2"
## TODO: Look at dependency, 3 year old, unmaintained, no license specified.
pharos = "0.5.3"
phf = "0.11.2"
pin-project-lite = "0.2.13"
quick_cache = "0.5.1"
# TODO: Look at use of this dependency. Last update was 4 years ago and it is unmaintained
radix_trie = "0.2.1"
rand = "0.8.5"
rayon = "1.10.0"
regex = "1.10.6"
regex-syntax = "0.8.4"
reqwest = { version = "0.12.7", default-features = false }
ring = "0.17.13"
rmpv = "1.0.1"
roaring = "0.10.6"
rustls = { version = "0.23.12", default-features = false }
# Sub dependency of the rustls dependency, should be updated whenever rustls is.
# Defined so we can enable features on this dependency.
rustls-pki-types = "1.7.0"
rust_decimal = "1.36.0"
# TODO: Look at dependency, 5 years old seems unmaintained.
rust-stemmers = "1.2.0"
scrypt = "0.11.0"
semver = "1.0.20"
serde = "1.0.209"
serde_json = "1.0.127"
sha1 = "0.10.6"
sha2 = "0.10.8"
snap = "1.1.0"
strsim = "0.11.1"
subtle = "2.6"
sysinfo = "0.33.0"
tempfile = "3.10.1"
thiserror = "1.0.63"
tokio = { version = "1.41.1", default-features = false }
tokio-stream = "0.1"
tokio-util = "0.7.11"
tokio-tungstenite = "0.23.1"
tracing = "0.1.40"
ulid = "1.1.0"
unicase = "2.7.0"
url = "2.5.0"
uuid = "1.10.0"
wasm-bindgen-futures = "0.4.39"
wasmtimer = { version = "0.2.0", default-features = false }
ws_stream_wasm = "0.7.4"

# used only in dev-dependencies
criterion = "0.5.1"
env_logger = "0.11.7"
flate2 = "1.0.28"
hashbrown = "0.14.5"
pprof = "0.14.0"
serial_test = "2.0.0"
temp-dir = "0.1.11"
test-log = "0.2.13"
time = "0.3.36"
tracing-subscriber = "0.3.18"
wiremock = "0.6.0"

[features]
# Public features
default = [
    "allocator",
    "allocation-tracking",
    "storage-mem",
    "storage-surrealkv",
    "storage-surrealcs",
    "storage-rocksdb",
    "scripting",
    "http",
]
allocator = ["surrealdb/allocator"]
storage-mem = ["surrealdb/kv-mem"]
storage-rocksdb = ["surrealdb/kv-rocksdb"]
storage-tikv = ["surrealdb/kv-tikv"]
storage-surrealkv = ["surrealdb/kv-surrealkv"]
storage-surrealcs = ["surrealdb/kv-surrealcs"]
scripting = ["surrealdb/scripting"]
http = ["surrealdb/http"]
http-compression = []
ml = ["surrealdb/ml"]
jwks = ["surrealdb/jwks"]
allocation-tracking = ["surrealdb/allocation-tracking"]
performance-profiler = ["dep:pprof"]
# FoundationDB features
storage-fdb-7_1 = ["surrealdb/kv-fdb-7_1"]
storage-fdb-7_3 = ["surrealdb/kv-fdb-7_3"]
# Deprecated features
# Doesn't do anything. Use a version specific `storage-fdb-*` feature instead.
storage-fdb = ["surrealdb/kv-fdb"]
# This feature doesn't do anything yet
enterprise = []

[profile.release]
lto = true
strip = true
opt-level = 3
panic = 'abort'
codegen-units = 1

[profile.bench]
strip = false

[profile.make]
inherits = "dev"

[dependencies]
# workspace internal dependencies
surrealdb = { workspace = true, features = [
    "protocol-http",
    "protocol-ws",
    "rustls",
] }
surrealdb-core.workspace = true

# External surreal crates
revision = { workspace = true, features = [
    "chrono",
    "geo",
    "roaring",
    "regex",
    "rust_decimal",
    "uuid",
] }

# Crates only used by the root surrealdb crate
arc-swap = "1.7.1"
axum = { version = "0.7.5", features = ["tracing", "ws"] }
axum-extra = { version = "0.9.3", features = [
    "query",
    "typed-routing",
    "typed-header",
] }
axum-server = { version = "0.7.1", features = ["tls-rustls-no-provider"] }
clap = { version = "4.4.11", features = [
    "env",
    "derive",
    "wrap_help",
    "unicode",
] }
glob = "0.3.1"
http-body = "1.0.0"
http-body-util = "0.1.1"
hyper = "1.4.1"
opentelemetry = { version = "0.24" }
opentelemetry_sdk = { version = "0.24", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.17.0", features = ["metrics"] }
rustyline = { version = "12.0.0", features = ["derive"] }
serde_pack = { version = "1.1.2", package = "rmp-serde" }
tower = { version = "0.4.13", features = ["limit", "load-shed"] }
tower-http = { version = "0.5.2", features = [
    "trace",
    "sensitive-headers",
    "auth",
    "request-id",
    "util",
    "catch-panic",
    "cors",
    "set-header",
    "limit",
    "add-extension",
    "compression-full",
] }
tower-service = "0.3.3"
tracing-appender = "0.2.3"
tracing-opentelemetry = "0.25.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
urlencoding = "2.1.3"

# Other crates
argon2.workspace = true
async-graphql = { workspace = true, default-features = false }
async-graphql-axum.workspace = true
base64.workspace = true
bytes.workspace = true
chrono.workspace = true
ciborium.workspace = true
futures.workspace = true
futures-util.workspace = true
geo.workspace = true
geo-types.workspace = true
http.workspace = true
num_cpus.workspace = true
pin-project-lite.workspace = true
rand.workspace = true
reqwest = { workspace = true, default-features = false, features = [
    "blocking",
    "gzip",
    "http2",
] }
rmpv.workspace = true
rust_decimal.workspace = true
semver.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "signal"] }
tokio-stream.workspace = true
tokio-tungstenite.workspace = true
tokio-util = { workspace = true, features = ["io"] }
tracing.workspace = true
uuid = { workspace = true, features = ["serde", "js", "v4", "v7"] }

# Optional crates
pprof = { workspace = true, features = [
    "flamegraph",
    "prost-codec",
], optional = true }

[target.'cfg(windows)'.dependencies]
nu-ansi-term = "0.46.0"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27.1", features = ["user"] }

[target.'cfg(unix)'.dev-dependencies]
nix = { version = "0.27.1", features = ["signal", "user"] }

[dev-dependencies]
# Crates only used by the root surrealdb crate
assert_fs = "1.0.13"
opentelemetry-proto = { version = "0.7.0", features = [
    "gen-tonic",
    "metrics",
    "logs",
] }
rcgen = "0.13.2"
tonic = "0.12.3"

# Other crates
chrono.workspace = true
env_logger.workspace = true
jsonwebtoken.workspace = true
serial_test.workspace = true
test-log = { workspace = true, features = ["trace"] }
ulid.workspace = true
wiremock.workspace = true

[build-dependencies]
semver.workspace = true

[package.metadata.deb]
maintainer-scripts = "pkg/deb/"
maintainer = "Tobie Morgan Hitchcock <tobie@surrealdb.com>"
copyright = "SurrealDB Ltd. 2022"
systemd-units = { enable = true }
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    [
        "target/release/surreal",
        "usr/share/surrealdb/surreal",
        "755",
    ],
    [
        "pkg/deb/README",
        "usr/share/surrealdb/README",
        "644",
    ],
]
extended-description = "A scalable, distributed, collaborative, document-graph database, for the realtime web."
license-file = ["LICENSE", "4"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(docker)',
    'cfg(storage)',
] }
