[package]
name = "surrealdb-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.64.0"
authors = ["Tobie Morgan Hitchcock <tobie@surrealdb.com>"]
description = "SurrealDB official client"
repository = "https://github.com/surrealdb/surrealdb/tree/main/client"
homepage = "https://surrealdb.com"
documentation = "https://docs.rs/surrealdb-rs"
readme = "README.md"
keywords = ["database", "database-client"]
categories = ["database", "asynchronous"]
license = "Apache-2.0"
resolver = "2"

[features]
default = ["ws", "rustls"]
http = ["dep:reqwest", "dep:tokio-util", "dep:indexmap"]
ws = ["dep:tokio-tungstenite", "dep:tokio-stream", "dep:indexmap", "tokio/time"]
rustls = ["dep:rustls", "reqwest?/rustls-tls", "tokio-tungstenite?/__rustls-tls"]
native-tls = ["dep:native-tls", "reqwest?/native-tls", "tokio-tungstenite?/native-tls"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
async-trait = "0.1.58"
dmp = "0.1.1"
flume = "0.10.14"
futures = { version = "0.3.25", default-features = false, features = ["alloc", "executor"] }
futures-concurrency = "6.0.1"
indexmap = { version = "1.9.1", optional = true, features = ["serde"] }
native-tls = { version = "0.2.11", optional = true }
once_cell = "1.16.0"
reqwest = { version = "0.11.12", default-features = false, features = ["json", "stream"], optional = true }
rustls = { version = "0.20.7", optional = true }
semver = { version = "1.0.14", features = ["serde"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
serde_pack = { version = "1.1.1", package = "rmp-serde" }
surrealdb = { git = "https://github.com/rushmorem/surrealdb", branch = "suppress-warnings", default-features = false }
tokio-stream = { version = "0.1.11", optional = true }
tokio-util = { version = "0.7.4", optional = true, features = ["compat"] }
tracing = "0.1.37"
url = "2.3.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.21.2", default-features = false, features = ["fs", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.17.2", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1.21.2", default-features = false, features = ["rt"] }
pharos = "0.5.3"
wasm-bindgen-futures = "0.4.33"
ws_stream_wasm = "0.7.3"

[dev-dependencies]
time = { version = "0.3.17", features = ["serde"] }
tokio = { version = "1.21.2", default-features = false, features = ["macros", "rt", "sync"] }
tracing-subscriber = "0.3.16"
ulid = { version = "1.0.0", features = ["serde"] }
